--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </section>
 
         <div class="category-section">
-            <h2>Dairy, Bread & Eggs <a href="#" class="text text-success text-decoration-none fs-6 fw-bold">SeeAll</a></h2>
+            <h2>Dairy, Bread & Eggs <a href="#" class="text-success text-decoration-none fs-6 fw-bold">SeeAll</a></h2>
             
             <div class="category-section-row">
                 <div class="my-list pt-3">
@@ -166,7 +166,7 @@
         </div><br><br>
          
         <div class="category-section">
-            <h2>Rolling paper & tobacco <a href="#" class="text text-success text-decoration-none fs-6 fw-bold">SeeAll</a></h2>
+            <h2>Rolling paper & tobacco <a href="#" class="text-success text-decoration-none fs-6 fw-bold">SeeAll</a></h2>
             <div class="category-section-row">
                 <div class="my-list pt-3">
                 <div class="card p-3 d-inline-block my-card flex-column">
